--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -2,19 +2,19 @@
 
 :root {
   --blue-link: #1769e0;
-  --blue: #3db2ff;
   --error: #fcebe2;
+  --lightblue: #3db2ff;
   --lightpink: #faefef;
   --orange: #ff9718;
   --success: #e2fcfc;
-  --nav-item: #ff9718;
+	--lightgrey: #837d87;
 }
 
 :focus {
-  outline: none;
+	outline: none;
 }
 
-/* HTML elements default styling */
+/* Removing default HTML styles */
 
 html {
   height: 100%;
@@ -28,6 +28,7 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
+  color: rgba(0, 0, 0, 0.801);
 }
 
 #root {
@@ -37,17 +38,13 @@ body {
   position: relative;
 }
 
-button {
-  cursor: pointer;
-  display: block;
-}
-
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
+  font-family: "Ubuntu", sans-serif;
   margin: 0;
 }
 
@@ -60,11 +57,47 @@ a:hover {
   text-decoration: none;
 }
 
+/* Auxiliary classes */
+
+.container {
+  padding: 1.5% 12% 2% 12%;
+}
+
+.btn {
+	cursor: pointer;
+  display: block;
+	border: none;
+}
+
+.text-input {
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 5px #ccc;
+  padding: 0.25rem 0.75rem;
+  border-radius: 4px;
+}
+
+.text-input:focus {
+  box-shadow: 0 0 1px 2px rgb(52, 174, 255, 0.5);
+  position: relative;
+}
+
+.btn-orange {
+	background-color: var(--orange);
+  border-radius: 3rem;
+  box-shadow: 2px 2px 2px #ccc;
+  color: white;
+  padding: 0.75rem 1.5rem;
+}
+
+.btn-orange:hover {
+	background-color: #ff7809;
+}
+
 /* NavBar */
 
 .navbar {
   align-items: center;
-  background: linear-gradient(45deg, var(--orange), var(--blue)) no-repeat;
+  background: linear-gradient(45deg, var(--orange), var(--lightblue)) no-repeat;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25);
   display: flex;
   justify-content: space-between;
@@ -107,15 +140,10 @@ a:hover {
 .user {
   align-items: center;
   background-color: white;
-  border-radius: 2rem;
-  border: none;
   color: var(--orange);
   display: flex;
   justify-content: center;
-  margin: 0 1rem;
   min-width: 5rem;
-  padding: 0.5rem 1rem;
-  text-decoration: none;
 }
 
 .user:hover {
@@ -127,20 +155,8 @@ a:hover {
 }
 
 .plus {
-  text-align: center;
-  width: 1.5rem;
   height: 1.5rem;
   padding: 0.5rem;
-  border-radius: 2rem;
-  border: none;
-  color: white;
-  display: block;
-  margin: 0rem 1rem;
-}
-
-.plus:hover {
-  background-color: white;
-  color: var(--blue-link);
 }
 
 @media (max-width: 750px) {
@@ -158,14 +174,15 @@ a:hover {
   }
 
   .navbar {
-		background: linear-gradient(90deg, var(--orange), var(--blue)) no-repeat;
+    background: linear-gradient(90deg, var(--orange), var(--lightblue))
+      no-repeat;
     align-items: flex-start;
     flex-direction: column;
     padding: 0;
   }
 
   .nav-list {
-		display: none;
+    display: none;
     flex-direction: column;
     text-align: center;
     width: 100%;
@@ -178,40 +195,31 @@ a:hover {
     width: 100%;
   }
 
-	.plus {
-		width: 100%;
-		margin: 0;
-		border-radius: 0;
-		padding: 0.5rem 0;
-	}
-
   .navbar-toggle {
     display: flex;
   }
 
   .user {
     margin: 0 auto;
-    max-width: 10rem;
-		border-radius: 2rem;
+    min-width: 5rem;
+    width: auto;
+    border-radius: 2rem;
+    padding: 0.5rem 1rem;
   }
+
+	.container {
+		padding: 1.5% 9% 2% 9%;
+	}
 }
 
-/* Login/Register */
-
-.login-heading {
-  color: rgba(0, 0, 0, 0.801);
-  font-size: 2.5rem;
-  font-weight: bold;
-  line-height: 1.5;
-  margin: 2rem 0;
-}
-
-.container {
-  padding: 1.5% 12% 2% 12%;
-}
+/* Login / Register */
 
 .login-page {
   text-align: center;
+}
+
+.login-page .big-heading {
+  margin: 2rem 0;
 }
 
 .login-page a {
@@ -225,11 +233,7 @@ a:hover {
 }
 
 .login-input {
-  border: 1px solid #ccc;
-  box-shadow: 0 2px 5px #ccc;
-  display: block;
   height: 2.5rem;
-  padding: 0.25rem 0.75rem;
   width: 18rem;
 }
 
@@ -239,31 +243,23 @@ a:hover {
 }
 
 .login-input-top {
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 .login-input-bottom {
-  border-bottom-left-radius: 6px;
-  border-bottom-right-radius: 6px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
   margin-bottom: 1rem;
 }
 
 .login-button {
-  background-color: var(--orange);
-  border-radius: 3rem;
-  border: none;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
-  color: white;
   font-size: 1.5rem;
   font-weight: bold;
-  margin: 1rem auto;
-  padding: 0.75rem 1.5rem;
+  margin: 2rem auto;
 }
 
-/* Dashboard */
-
-/* Home Page */
+/* Dashboard / Home Page */
 
 .home-section {
   align-items: center;
@@ -278,14 +274,9 @@ a:hover {
 }
 
 .create-button {
-  background-color: var(--orange);
-  border-radius: 3rem;
-  border: none;
-  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
-  color: white;
+	padding: 1rem 2rem;
   font-size: 2rem;
   font-weight: bold;
-  padding: 1rem 2rem;
   text-align: center;
 }
 
@@ -306,7 +297,7 @@ a:hover {
 .feature-tab {
   padding: 2rem 1rem;
   text-align: center;
-  background-color: #fff;
+  background-color: white;
   width: 15rem;
   margin: 0 1rem;
   border-radius: 0.5rem;
@@ -320,18 +311,17 @@ a:hover {
 
 .feature-title {
   font-size: 1.5rem;
-  margin: 0.5em 0 0.5rem 0;
+  margin: 0.5em 0;
 }
 
 .feature-desc {
   font-size: 0.9rem;
   font-family: "Karla", sans-serif;
-  color: #837d87;
+  color: var(--lightgrey);
 }
 
 @media (max-width: 750px) {
   .home-section {
-    height: auto;
     flex-direction: column;
     text-align: center;
   }
@@ -344,15 +334,12 @@ a:hover {
     flex-direction: column;
     align-items: center;
   }
-
-  .feature-tab {
-    margin-bottom: 1rem;
-  }
 }
 
 /* Create Poll */
+
 .create-form {
-  padding: 3% 12% 7% 12%;
+  padding-top: 3%;
 }
 
 .create-label {
@@ -361,43 +348,25 @@ a:hover {
 }
 
 .submit {
-  background-color: var(--orange);
-  border-radius: 3rem;
-  border: none;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
-  color: white;
   font-size: 1.5rem;
   font-weight: bold;
   margin: 1rem auto 2rem auto;
-  padding: 0.75rem 1.5rem;
-  text-decoration: none;
 }
 
 .add {
-  background-color: var(--orange);
-  border-radius: 3rem;
-  border: none;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
-  color: white;
   font-size: 0.75rem;
   font-weight: bold;
   margin: 1rem 0;
-  padding: 0.75rem 1.5rem;
-  text-decoration: none;
 }
 
-.create-form input {
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  box-shadow: 0 2px 5px #ccc;
+.create-form .text-input {
   height: 1.5rem;
   margin: 0.5rem 0 0.5rem 0;
-  padding: 0.25rem 0.75rem;
-  width: 100%;
+  width: 95%;
 }
 
-.option input {
-  width: 50%;
+.option .text-input {
+  width: 40%;
 }
 
 .remove {
@@ -405,7 +374,6 @@ a:hover {
   align-items: center;
   background-color: #ddd;
   border-radius: 4px;
-  border: none;
   display: flex;
   height: 2rem;
   justify-content: center;
@@ -427,7 +395,7 @@ a:hover {
 
 .poll-link {
   color: black;
-  background-color: #fff;
+  background-color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -443,7 +411,7 @@ a:hover {
 }
 
 .author {
-  color: rgb(138, 138, 138);
+  color: var(--lightgrey);
   font-size: 0.85rem;
 }
 
@@ -459,7 +427,7 @@ a:hover {
   padding: 0.75rem 1.25rem;
   flex-grow: 1;
   color: black;
-  background-color: #fff;
+  background-color: white;
   border-radius: 4px;
   box-shadow: 0 2px 5px #ccc;
 }
@@ -480,19 +448,16 @@ a:hover {
   align-items: center;
   display: flex;
   justify-content: center;
-  background-color: var(--orange);
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
-  color: white;
   padding: 0.4rem 0.75rem;
   border-radius: 4px;
 }
 
-.form-body {
+.poll-form {
   min-width: 10rem;
   max-width: 35rem;
   margin: 1rem auto 2rem auto;
   padding: 1.5rem 2.2rem 1rem;
-  background-color: #fff;
+  background-color: white;
   box-shadow: 0 2px 5px #cccccc;
   border-radius: 4px;
 }
@@ -516,10 +481,6 @@ a:hover {
   width: 1.1rem;
 }
 
-.poll-option-label input:checked {
-  background-color: var(--orange);
-}
-
 .poll-option-label p {
   color: #202124;
 }
@@ -538,7 +499,7 @@ footer {
   position: absolute;
   text-align: center;
   width: 100%;
-  color: rgb(138, 138, 138);
+  color: var(--lightgrey);
 }
 
 /* Loader */
@@ -593,24 +554,18 @@ footer {
   cursor: default;
 }
 
-/* Error */
+/* Error / Success*/
+.msg {
+	padding: 1rem;
+	border-radius: 4px;
+	margin: 0 auto 1rem auto;
+	width: 30%;
+}
 
 .error {
   background-color: var(--error);
-  border-radius: 4px;
   border: 1px solid rgb(143, 34, 27);
   color: rgba(194, 11, 11, 0.836);
-  margin: 0 auto 1rem auto;
-  padding: 1rem;
-  width: 30%;
-}
-
-.error p {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  min-height: 1.5rem;
-  text-align: center;
 }
 
 .warning {
@@ -619,18 +574,14 @@ footer {
   margin-right: 0.5rem;
 }
 
-/* Success */
-
 .success {
   color: rgb(0, 136, 29);
   background-color: var(--success);
   border: 1px solid rgb(8, 102, 28);
-  margin: 0 auto 1rem auto;
-  padding: 1rem;
-  width: 30%;
 }
 
-.success p {
+.success p,
+.error p {
   align-items: center;
   display: flex;
   justify-content: center;
@@ -639,16 +590,12 @@ footer {
 }
 
 .tick {
-  font-size: 0.8rem;
+  font-size: 1rem;
   margin-right: 0.5rem;
 }
 
 @media (max-width: 750px) {
-  .error {
-    width: 70%;
-  }
-
-  .success {
+	.msg {
     width: 70%;
   }
 }
@@ -660,6 +607,7 @@ footer {
 
 .four-zero-four {
   font-size: 8rem;
+	margin-bottom: 1rem;
 }
 
 .not-found-img {
@@ -671,15 +619,11 @@ footer {
 }
 
 .not-found-desc {
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
 }
 
 .go-to-home-button {
-  background-color: var(--orange);
-  border-radius: 3rem;
-  border: none;
-  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
-  color: white;
+	display: inline-block;
   font-size: 1.5rem;
   font-weight: bold;
   padding: 1rem 2rem;
@@ -695,7 +639,7 @@ footer {
   padding: 2rem;
   width: 60%;
   box-shadow: 0 2px 5px #cccccc;
-  background-color: #fff;
+  background-color: white;
 }
 
 .box p {
